src/objects/Escalation_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Additional_Emails_1__c</fullName>
        <inlineHelpText>Please enter cc email addresses for first escalation.</inlineHelpText>
        <label>Additional Emails 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Emails_2__c</fullName>
        <inlineHelpText>Please enter cc email addresses for second escalation.</inlineHelpText>
        <label>Additional Emails 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Age_Over_1__c</fullName>
        <inlineHelpText>Please enter the number of hours for first escalation.</inlineHelpText>
        <label>Escalation Age Over 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Age_Over_2__c</fullName>
        <inlineHelpText>Please enter the number of hours for second escalation.</inlineHelpText>
        <label>Escalation Age Over 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <inlineHelpText>Please enter the name of email tempate name used for sending mail for escalation notification.</inlineHelpText>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Escalation Settings</label>
</CustomObject>